<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:showIn="@layout/layout_comentario"
    android:layout_marginBottom="8dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_comentary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="3dp"
        app:cardBackgroundColor="@color/white_96"
        app:cardElevation="0dp"
        app:strokeColor="@color/cardview_shadow_end_color"
        app:strokeWidth="1dp">

        <RelativeLayout
            android:id="@+id/rl_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_comentario"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/black"
                app:cardCornerRadius="50dp">

                <ImageView
                    android:id="@+id/image_perfil"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/todo" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/ll_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/cv_comentario"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/comentario_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <TextView
                    android:id="@+id/comentario_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/email"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_card"
                android:padding="16dp">

                <TextView
                    android:id="@+id/comentario_body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/body_post"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_butons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_body"
                android:orientation="horizontal">


                <ImageButton
                    android:id="@+id/btn_curtida"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@android:color/transparent"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_curtida" />

                <TextView
                    android:id="@+id/quantidade_curtida"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/quantidade_number" />

                <ImageButton
                    android:id="@+id/btn_comentary"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="45dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@android:color/transparent"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_comentary" />

                <TextView
                    android:id="@+id/quantidade_comentary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/quantidade_number" />

                <ImageButton
                    android:id="@+id/btn_shared"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="45dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@android:color/transparent"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_share" />

                <TextView
                    android:id="@+id/quantidade_shared"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/quantidade_number" />


            </LinearLayout>

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>